--- a/WiredBrainCoffee.UI/Components/MenuListItem.razor
+++ b/WiredBrainCoffee.UI/Components/MenuListItem.razor
@@ -7,7 +7,7 @@
     </div>
     <div class="menu-item-info">
         <p class="menu-item-title"><b>@MenuItem.Name</b></p>
-        <p class="menu-item-summary">@MenuItem.Summary</p>
+        <p class="menu-item-summary">@MenuItem.ShortDescription</p>
         <div class="menu-item-actions">
             <span class="menu-item-price"><b>Price: @MenuItem.Price.ToString("C")</b></span>
             <Button @onclick="(() => OnClickCallback.InvokeAsync(MenuItem))" Color="Color.Light">Add to Order</Button>
