--- a/WiredBrainCoffee.UI/Admin/AdminDashboard.razor
+++ b/WiredBrainCoffee.UI/Admin/AdminDashboard.razor
@@ -1,8 +1,15 @@
 ﻿@namespace WiredBrainCoffee.UI.Admin
-
 @page "/admin"
 
 @inject NavigationManager NavManager
+
+<PageTitle>
+    Admin Center
+</PageTitle>
+
+<HeadContent>
+    <link href="css/admin.css" rel="stylesheet" />
+</HeadContent>
 
 <div class="page-wrapper">
     <div class="container">
@@ -13,7 +20,7 @@
                 <br />
             </div>
             <div class="col-md-9">
-                <Orders />
+                <OrderHistory />
             </div>
         </div>
     </div>
