--- a/WiredBrainCoffee.UI/Admin/OrderHistory.razor
+++ b/WiredBrainCoffee.UI/Admin/OrderHistory.razor
@@ -6,6 +6,10 @@
     <h2>Order History</h2>
     <hr />
     <div class="order-history">
-        <p>Under construction.</p>
+        <p>This area is under construction.</p>
     </div>
 </div>
+
+@code {
+    
+}
