--- a/WiredBrainCoffee.UI/Pages/ContactForm.razor
+++ b/WiredBrainCoffee.UI/Pages/ContactForm.razor
@@ -1,48 +1,21 @@
 ﻿@page "/Contact"
 @using System.Net.Http;
 
-@inject NavigationManager NavManager
-@inject IContactService ContactService
+<PageTitle>
+    Contact Us
+</PageTitle>
 
 <div class="page-wrapper">
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <h2>Contact Us</h2>
-                <p>We'd love to hear from you! We try our best to respond within 24 hours.</p>
+                <p>Please select your contact type:</p>
+                <Select TValue="string" SelectedValueChanged="@OnSelectedValueChanged">
+                    <SelectItem Value="@nameof(CustomerContact)">Customer</SelectItem>
+                    <SelectItem Value="@nameof(PartnerContact)">Partner</SelectItem>
+                </Select>
                 <hr />
-                <div class="contact-form">
-                    <EditForm Model="@Contact" OnValidSubmit="@HandleValidSubmit">
-                        <DataAnnotationsValidator />
-                        <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
-                        <div class="form-group">
-                            <label for="name">Name: </label>
-                            <InputText id="firstName" class="form-control" @bind-Value="@Contact.Name" placeholder="Enter first name"></InputText>
-                            <ValidationMessage For="@(() => Contact.Name)" />
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email: </label>
-                            <InputText id="email" class="form-control" @bind-Value="@Contact.Email" placeholder="Enter email"></InputText>
-                            <ValidationMessage For="@(() => Contact.Email)" />
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Phone: </label>
-                            <InputText id="phone" class="form-control" @bind-Value="@Contact.Phone" placeholder="Enter phone"></InputText>
-                            <ValidationMessage For="@(() => Contact.Phone)" />
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message: </label>
-                            <InputTextArea id="message" class="form-control" @bind-Value="@Contact.Message" placeholder="Enter message"></InputTextArea>
-                            <ValidationMessage For="@(() => Contact.Message)" />
-                        </div>
-
-                        <div class="form-group">
-                            <InputFile OnChange="@OnInputFileChange" multiple />
-                        </div>
-
-                        <button type="submit" class="btn btn-info">Submit</button>
-                    </EditForm>
-                </div>
+                <DynamicComponent Type="@selectedType" />
             </div>
             <div class="col-md-4">
                 <ErrorBoundary>
@@ -64,20 +37,15 @@
         </div>
     </div>
 </div>
+
+
 @code {
-    public Contact Contact = new Contact();
+   Type selectedType = Type.GetType("WiredBrainCoffee.UI.Components.CustomerContact");
 
-    IReadOnlyList<IBrowserFile> selectedFiles;
-
-    private void OnInputFileChange(InputFileChangeEventArgs e)
+    Task OnSelectedValueChanged(string value )
     {
-        selectedFiles = e.GetMultipleFiles(3);
-    }
+        selectedType = Type.GetType($"WiredBrainCoffee.UI.Components.{value}");
 
-    private async void HandleValidSubmit()
-    {
-        Contact.SubmittedTime = DateTime.UtcNow;
-        await ContactService.PostContact(Contact, selectedFiles);
-        NavManager.NavigateTo("contact-confirmation");
+        return Task.CompletedTask;
     }
-}
+} 
