--- a/WiredBrainCoffee.UI/Pages/Index.razor
+++ b/WiredBrainCoffee.UI/Pages/Index.razor
@@ -41,7 +41,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
                 </div>
                 <div class="card-footer">
-                    <NavLink href="Order?ActiveTab=food" class="btn btn-info btn-block">Food Menu</NavLink>
+                    <NavLink href="Order" class="btn btn-info btn-block">Food Menu</NavLink>
                 </div>
             </div>
         </div>
